# mpa-react-ts

./: .editorconfig  .env.example  .gitignore  README.md  manage.py  pyproject.toml
client/: .eslintcache  .neutrinorc.js  export-config.js  package-lock.json  package.json
client/src/components/App/: index.tsx
component/: .neutrinorc.js  package-lock.json  package.json
component/src/: index.tsx
component/src/components/Example/: index.tsx
component/src/components/Menu/: index.tsx
mpademo/: asgi.py  settings.py  urls.py  wsgi.py
polls/: urls.py  views.py
polls/templates/polls/: component.html  index.html  page1.html  page2.html
templates/: root.html
web/: .neutrinorc.js  package-lock.json  package.json
web/src/: index.tsx
web/src/components/Example/: index.tsx
web/src/components/ListBox/: index.tsx
web/src/pages/page1/: index.tsx
web/src/pages/page2/: index.tsx
