[tool.poetry]
name = "mpa-react-ts"
version = "0.1.0"
description = ""
authors = ["Ace <ace.jl.han@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
djangorestframework = "^3.12.2"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest-django = "^4.1.0"
pytest-django-queries = "^1.2.0"
pytest-mock = "^3.5.1"

# code checker
flake8 = "^3.9.0"
flake8-docstrings = "^1.6.0"
isort = "^5.7.0"
pre-commit = "^2.11.1"
pydocstyle = "^6.0.0"
django-stubs = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
